Refactor UM application

--- a/klog/klog.vcxproj
+++ b/klog/klog.vcxproj
@@ -139,7 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="KbInputDataProcessor.cpp" />
+    <ClCompile Include="KbMakeCodeConverter.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="KbInputDataProcessor.h" />
+    <ClInclude Include="KbMakeCodeConverter.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
